3. Added a Panel layoutfor profile and home

--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -2,11 +2,18 @@
   
 
   <div class="container-fluid">
+    
     <div class="navbar-header">
       <a class="navbar-brand" href="#">TWITTER</a>
     </div>
+    
     <ul class="nav navbar-nav">
-      <li><a href="#">HOME</a></li>
+      
+      <li><a href="/home">HOME</a></li>
+      <li><a href="/explore">EXPLORE</a></li>
+      <li><a href="/profile">PROFILE</a></li>
+      
+
       <li class="dropdown">
         <a class="dropdown-toggle" data-toggle="dropdown" href="#">DROPDOWN
         <span class="caret"></span></a>
@@ -16,8 +23,7 @@
           <li><a href="#">LOGOUT</a></li>
         </ul>
       </li>
-      <li><a href="#">EXPLORE</a></li>
-      <li><a href="#">PROFILE</a></li>
+
     </ul>
 
 
@@ -38,9 +44,8 @@
 
   </div>
 
-  
-
-
-
 
 </nav>
+
+
+<br>
