--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,2 +1,40 @@
-<h1>Pages#home</h1>
-<p>Find me in app/views/pages/home.html.erb</p>
+<div class="rows">
+
+	<div class="col-xs-3">
+		<div class="panel panel-default">
+  			<div class="panel-body">
+  				STATS
+			</div>
+		</div>
+	</div>
+
+	<div class="col-xs-6">
+		<div class="panel panel-default">
+  			<div class="panel-body">
+  				FEED
+			</div>
+		</div>
+	</div>
+
+	<div class="col-xs-3">
+		<div class="panel panel-default">
+  			<div class="panel-body">
+  				ABOUT
+			</div>
+		</div>
+	</div>
+
+</div>
+
+
+<div class="rows" >
+
+	<div class="col-xs-3">
+		<div class="panel panel-default">
+  			<div class="panel-body">
+  				TRENDS
+			</div>
+		</div>
+	</div>
+
+</div>
