--- a/app/views/pages/profile.html.erb
+++ b/app/views/pages/profile.html.erb
@@ -1,2 +1,49 @@
-<h1>Pages#profile</h1>
-<p>Find me in app/views/pages/profile.html.erb</p>
+<div class="rows">
+	<div class="jumbotron">
+		HEADER
+	</div>
+</div>
+
+
+
+
+<div class="rows">
+
+	<div class="col-xs-3">
+		<div class="panel panel-default">
+  			<div class="panel-body">
+  				STATS
+			</div>
+		</div>
+	</div>
+
+	<div class="col-xs-6">
+		<div class="panel panel-default">
+  			<div class="panel-body">
+  				FEED
+			</div>
+		</div>
+	</div>
+
+	<div class="col-xs-3">
+		<div class="panel panel-default">
+  			<div class="panel-body">
+  				ABOUT
+			</div>
+		</div>
+	</div>
+
+</div>
+
+
+<div class="rows" >
+
+	<div class="col-xs-3 col-xs-offset-9">
+		<div class="panel panel-default">
+  			<div class="panel-body">
+  				TRENDS
+			</div>
+		</div>
+	</div>
+
+</div>
