--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -1,51 +1,7 @@
-<nav class="navbar navbar-inverse">
-  
-
-  <div class="container-fluid">
-    
-    <div class="navbar-header">
-      <a class="navbar-brand" href="#">TWITTER</a>
-    </div>
-    
-    <ul class="nav navbar-nav">
-      
-      <li><a href="/home">HOME</a></li>
-      <li><a href="/explore">EXPLORE</a></li>
-      <li><a href="/profile">PROFILE</a></li>
-      
-
-      <li class="dropdown">
-        <a class="dropdown-toggle" data-toggle="dropdown" href="#">DROPDOWN
-        <span class="caret"></span></a>
-        <ul class="dropdown-menu">
-          <li><a href="#">HELP</a></li>
-          <li><a href="#">SETTINGS</a></li>
-          <li><a href="#">LOGOUT</a></li>
-        </ul>
-      </li>
-
-    </ul>
 
 
-    <ul class="nav navbar-nav navbar-right">
-      <li><a href="#"><span class="glyphicon glyphicon-user"></span> Sign Up</a></li>
-      <li><a href="#"><span class="glyphicon glyphicon-log-in"></span> Login</a></li>
-    </ul>
-
-
-    <form class="navbar-form navbar-right" action="/action_page.php">
-
-      <div class="form-group">
-        <input type="text" class="form-control" placeholder="Search">
-      </div>
-      <button type="submit" class="btn btn-default">Submit</button>
-
-    </form>
-
-  </div>
-
-
-</nav>
-
-
-<br>
+<% if user_signed_in? %>
+  <%= render '/layouts/navbar-User' %>
+<% else %>
+  <%= render '/layouts/navbar-Guest' %>
+<% end %>
