--- a/app/views/layouts/_navbar-User.html.erb
+++ b/app/views/layouts/_navbar-User.html.erb
@@ -11,7 +11,7 @@
       
       <li><a href="/home">HOME</a></li>
       <li><a href="/explore">EXPLORE</a></li>
-      <li><a href="/profile">PROFILE</a></li>
+      <li><a href="/user/<%=current_user.email%>">PROFILE</a></li>
       
 
     </ul>
