--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,19 +1,29 @@
 <div class="rows">
 
 	<div class="col-xs-3">
+		
 		<div class="panel panel-default">
   			<div class="panel-body">
-  				STATS
+  				INFO
 			</div>
 		</div>
+		
+		<div class="panel panel-default">
+  			<div class="panel-body">
+  				TRENDS
+			</div>
+		</div>
+
 	</div>
 
 	<div class="col-xs-6">
+		<% for @p in @posts%>
 		<div class="panel panel-default">
   			<div class="panel-body">
-  				FEED
+  				<p><%= @p.content %></p>
 			</div>
 		</div>
+		<% end %>
 	</div>
 
 	<div class="col-xs-3">
@@ -27,14 +37,3 @@
 </div>
 
 
-<div class="rows" >
-
-	<div class="col-xs-3">
-		<div class="panel panel-default">
-  			<div class="panel-body">
-  				TRENDS
-			</div>
-		</div>
-	</div>
-
-</div>
