--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -20,6 +20,9 @@
 		<% for @p in @posts%>
 		<div class="panel panel-default">
   			<div class="panel-body">
+  				<% @name = User.find_by_id(@p.user_id) %>
+   				<left> <b> <%= @name.email %> </b></left>
+   				<hr style="height:1px;border:none;color:#333;background-color:#333;" />
   				<p><%= @p.content %></p>
 			</div>
 		</div>
