--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,8 +13,8 @@
     <%= render '/layouts/navbar' %>
     <div class="container">
 
-      <span class="notice"><%= notice %></span>
-      <span class="alert"><%= alert %></span>
+      <b><span class="notice"><%= notice %></span></b>
+      <b><span class="alert"><%= alert %></span></b>
 
       <%= yield %>
 
