9. Logged out users can view Profiles

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,7 +13,7 @@
     <%= render '/layouts/navbar' %>
     <div class="container">
 
-      <b><span class="notice"><%= notice %></span></b>
+      <b><span class="notice" style="font-size:25px"><%= notice %></span></b>
       <b><span class="alert"><%= alert %></span></b>
 
       <%= yield %>
