--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -8,63 +8,140 @@
       </div>
     </div>
 
-<% end %>
+
+    <div class="rows">
+      
+      <div class="col-xs-3">
+          <div class="panel panel-default">
+            <div class="panel-body">
+                <b>WHO TO FOLLOW</b>
+                <% @users.each do |user| %>
+                  <br/>
+                  <a href="/user/<%=user.email%>"><%= user.email %></a>
+                <% end %>
+            </div>
+          </div>
+      </div>
+
+
+      <div class="col-xs-6">
+
+
+      <% for @p in @posts%>
+        <div class="panel panel-default">
+          <div class="panel-body row">
+
+            <div class="col-sm-1">
+              <p> PICTURE </p>
+            </div>
+
+            <div class="col-sm-11">
+              <% @each_user = User.find_by_id(@p.user_id) %>
+              <p class="post-title"; style="margin-left:25px;"> <b> <%= @each_user.email %> </b></p>
+              <p class="post-content"; style="margin-left:25px";> <%= @p.content %> </p>
+            </div>
+
+          </div>
+        </div>
+      <% end %>
+
+
+      </div>
+
+
+      <div class="col-xs-3">
+        <div class="panel panel-default">
+            <div class="panel-body">
+              ABOUT
+            </div>
+        </div>
+      </div>
+
+
+    </div>
+
+
+
+
+
+<% else %>
+
+
 
 
 
 <div class="rows">
+	
 
-	<div class="col-xs-3">
+  <div class="col-xs-3">	
+    		
+        <div class="panel panel-default">
+      			<div class="panel-body">
+        				<section class="stats">
+                    <%= render 'layouts/stats_home' %>
+                </section>
+    			   </div>
+        </div>
+
+
+            <div class="panel panel-default">
+              <div class="panel-body">
+                  <b>WHO TO FOLLOW</b>
+                  <% @users.each do |user| %>
+                    <br/>
+                    <a href="/user/<%=user.email%>"><%= user.email %></a>
+                  <% end %>
+              </div>
+            </div>
+
 		
-		<div class="panel panel-default">
-  			<div class="panel-body">
-  				INFO
-			</div>
-		</div>
-		
-		<div class="panel panel-default">
-  			<div class="panel-body">
-  				TRENDS
-			</div>
-		</div>
+		    <div class="panel panel-default">
+  			   <div class="panel-body">
+  				    TRENDS
+			     </div>
+		    </div>
 
 	</div>
 
 	<div class="col-xs-6">
 
-    <% if user_signed_in? %>
   		<div class="panel panel-default">
     			<div class="panel-body">
     				<%= render '/posts/posts_form' %>
-  			</div>
+  			  </div>
   		</div>	
-    <% end %>
 
-		<% for @p in @posts%>
-		<div class="panel panel-default">
-  			<div class="panel-body row">
+		  <% for @p in @posts%>
 
-  				<div class="col-sm-1">
-  					<p> PICTURE </p>
-  				</div>
+            <% @each_user = User.find_by_id(@p.user_id) %>
+            <% if current_user.following?(@each_user) %>
 
-  				<div class="col-sm-11">
-  					<% @name = User.find_by_id(@p.user_id) %>
-  					<p class="post-title"; style="margin-left:25px;"> <b> <%= @name.email %> </b></p>
-  					<p class="post-content"; style="margin-left:25px";> <%= @p.content %> </p>
-  				</div>
+      		  <div class="panel panel-default">
+        			 <div class="panel-body row">
 
-  				<div class="col-sm-12" >
-            	<%= link_to 'Edit', edit_post_path(@p) %><span class="glyphicon glyphicon-pencil"></span>
-       				<%= link_to 'Delete', post_path(@p), data: {:confirm => 'Are you sure?'}, :method => :delete %> <span class="glyphicon glyphicon-remove"></span>
-  				</div>
+                  
+            				<div class="col-sm-1">
+            					<p> PICTURE </p>
+            				</div>
 
-  			</div>
+            				<div class="col-sm-11">
+            					<p class="post-title"; style="margin-left:25px;"> <b> <%= @each_user.email %> </b></p>
+            					<p class="post-content"; style="margin-left:25px";> <%= @p.content %> </p>
+            				</div>
 
-  		</div>
-  		<% end %>
+            				<div class="col-sm-12" >
+                      	<%= link_to 'Edit', edit_post_path(@p) %><span class="glyphicon glyphicon-pencil"></span>
+                 				<%= link_to 'Delete', post_path(@p), data: {:confirm => 'Are you sure?'}, :method => :delete %> <span class="glyphicon glyphicon-remove"></span>
+            				</div>
 
-  	</div>
+        			</div>
+        		</div>
+
+            <% end %>
+
+      <% end %>
+
+  </div>
 
 
 	<div class="col-xs-3">
@@ -78,3 +155,6 @@
 </div>
 
 
+
+
+<% end %>
