--- a/app/views/pages/profile.html.erb
+++ b/app/views/pages/profile.html.erb
@@ -5,6 +5,7 @@
 	<div class="jumbotron">
 		<center>
 			<b><p style="color:#black;font-size:25px;"><%= @username %></p></b>
+		<%= render 'layouts/follow_form' if user_signed_in? %>
 		</center>
 	</div>
 </div>
@@ -17,7 +18,9 @@
 	<div class="col-xs-3">
 		<div class="panel panel-default">
   			<div class="panel-body">
-  				INFO
+  				<section class="stats">
+        			<%= render 'layouts/stats_profile' %>
+      			</section>
 			</div>
 		</div>
 	</div>
@@ -47,10 +50,14 @@
   					<p class="post-content"; style="margin-left:25px";> <%= @p.content %> </p>
   				</div>
 
+  				<% if user_signed_in? %>
+
   				<div class="col-sm-12" >
             	<%= link_to 'Edit', edit_post_path(@p) %><span class="glyphicon glyphicon-pencil"></span>
        				<%= link_to 'Delete', post_path(@p), data: {:confirm => 'Are you sure?'}, :method => :delete %> <span class="glyphicon glyphicon-remove"></span>
   				</div>
+
+  				<% end %>
 
   			</div>
 
