--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -17,7 +17,7 @@
                 <b>WHO TO FOLLOW</b>
                 <% @users.each do |user| %>
                   <br/>
-                  <a href="/user/<%=user.email%>"><%= user.email %></a>
+                  <a href="/user/<%=user.id%>"><%= user.email %></a>
                 <% end %>
             </div>
           </div>
@@ -89,7 +89,7 @@
                   <b>WHO TO FOLLOW</b>
                   <% @users.each do |user| %>
                     <br/>
-                    <a href="/user/<%=user.email%>"><%= user.email %></a>
+                    <a href="/user/<%=user.id%>"><%= user.email %></a>
                   <% end %>
               </div>
             </div>
@@ -114,7 +114,7 @@
 		  <% for @p in @posts%>
 
             <% @each_user = User.find_by_id(@p.user_id) %>
-            <% if current_user.following?(@each_user) %>
+            <% if current_user.following?(@each_user) or @each_user == current_user %>
 
       		  <div class="panel panel-default">
         			 <div class="panel-body row">
@@ -129,10 +129,14 @@
             					<p class="post-content"; style="margin-left:25px";> <%= @p.content %> </p>
             				</div>
 
+                    <% if current_user.id == @p.user_id %>
+
             				<div class="col-sm-12" >
                       	<%= link_to 'Edit', edit_post_path(@p) %><span class="glyphicon glyphicon-pencil"></span>
                  				<%= link_to 'Delete', post_path(@p), data: {:confirm => 'Are you sure?'}, :method => :delete %> <span class="glyphicon glyphicon-remove"></span>
             				</div>
+
+                    <% end %>
 
         			</div>
         		</div>
