--- a/app/views/pages/profile.html.erb
+++ b/app/views/pages/profile.html.erb
@@ -41,7 +41,8 @@
   			<div class="panel-body row">
 
   				<div class="col-sm-1">
-  					<p> PICTURE </p>
+            <p> PICTURE</p>
+  					<!-- <img src="/lib/assets/Male_empty_profile.jpg"> -->
   				</div>
 
   				<div class="col-sm-11">
@@ -50,7 +51,7 @@
   					<p class="post-content"; style="margin-left:25px";> <%= @p.content %> </p>
   				</div>
 
-  				<% if user_signed_in? %>
+  				<% if user_signed_in? and current_user.id == @p.user_id %>
 
   				<div class="col-sm-12" >
             	<%= link_to 'Edit', edit_post_path(@p) %><span class="glyphicon glyphicon-pencil"></span>
@@ -74,7 +75,7 @@
   				<b>WHO TO FOLLOW</b>
   				<% @users.each do |user| %>
   					<br/>
-  					<a href="/user/<%=user.email%>"><%= user.email %></a>
+  					<a href="/user/<%=user.id%>"><%= user.email %></a>
   				<% end %>
 			</div>
 		</div>
