--- a/app/views/example_mailer/sample_email.html.erb
+++ b/app/views/example_mailer/sample_email.html.erb
@@ -6,8 +6,8 @@
   <body>
     <h1>Hi <%= @receiver.email %></h1>
     <p>
-      Sample mail sent using smtp.
-      <%= @body %>
+      <h1>Sample mail sent using smtp.<h1>
+      <h4> <%= @body %> <h4>
     </p>
   </body>
 </html>
