--- a/app/views/example_mailer/sample_email.text.erb
+++ b/app/views/example_mailer/sample_email.text.erb
@@ -1,3 +1,4 @@
-Hi <%= @receiver.email %>
-Sample mail sent using smtp.
+Hi,This is from <%= @sender.email %>
+Mail sent using Twitter clone
 <%= @body %>
+To continue conversation Contact <%= @sender.email %>
