--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -14,11 +14,12 @@
       <div class="col-xs-3">
           <div class="panel panel-default">
             <div class="panel-body">
-                <b>WHO TO FOLLOW</b>
-                <% @users.each do |user| %>
-                  <br/>
-                  <a href="/user/<%=user.id%>"><%= user.email %></a>
-                <% end %>
+                <ul class="list-group">
+                    <li class="list-group-item">WHO TO FOLLOW</li>
+                    <% @users.each do |user| %>
+                      <a href="/user/<%=user.id%>" class="list-group-item list-group-item-info"><%= user.email %></a>
+                    <% end %>
+                </ul>
             </div>
           </div>
       </div>
@@ -32,13 +33,14 @@
           <div class="panel-body row">
 
             <div class="col-sm-1">
-              <p> PICTURE </p>
+              <img src="/profile2.jpg" height="40" width="50">
             </div>
 
             <div class="col-sm-11">
               <% @each_user = User.find_by_id(@p.user_id) %>
-              <p class="post-title"; style="margin-left:25px;"> <b> <%= @each_user.email %> </b></p>
-              <p class="post-content"; style="margin-left:25px";> <%= @p.content %> </p>
+              <p class="post-title"; style="margin-left:25px;"><span style="background-color:#80b3ff;padding: 5px;"> <font size="3"> <b> <%= @each_user.email %> </b></font></p>
+
+              <p class="post-content"; style="margin-left:25px";><span style="background-color:#e6ffb3;padding: 5px;"> <font size="4"> <%= @p.content %></font> </p>
             </div>
 
           </div>
@@ -86,11 +88,14 @@
 
             <div class="panel panel-default">
               <div class="panel-body">
-                  <b>WHO TO FOLLOW</b>
-                  <% @users.each do |user| %>
-                    <br/>
-                    <a href="/user/<%=user.id%>"><%= user.email %></a>
-                  <% end %>
+
+                <ul class="list-group">
+                    <li class="list-group-item">WHO TO FOLLOW</li>
+                    <% @users.each do |user| %>
+                      <a href="/user/<%=user.id%>" class="list-group-item list-group-item-info"><%= user.email %></a>
+                    <% end %>
+                </ul>
+
               </div>
             </div>
 
@@ -120,21 +125,25 @@
         			 <div class="panel-body row">
 
                   
-            				<div class="col-sm-1">
-            					<p> PICTURE </p>
-            				</div>
+                <div class="col-sm-1">
+                  <img src="/profile2.jpg" height="40" width="50">
+                </div>
 
-            				<div class="col-sm-11">
-            					<p class="post-title"; style="margin-left:25px;"> <b> <%= @each_user.email %> </b></p>
-            					<p class="post-content"; style="margin-left:25px";> <%= @p.content %> </p>
-            				</div>
+                <div class="col-sm-11">
+                    <% @each_user = User.find_by_id(@p.user_id) %>
+                    <p class="post-title"; style="margin-left:25px;"><span style="background-color:#80b3ff;padding: 5px;"> <font size="3"> <b> <%= @each_user.email %> </b></font></p>
+                      
+                    <p class="post-content"; style="margin-left:25px";><span style="background-color:#e6ffb3;padding: 5px;"> <font size="4"> <%= @p.content %></font> </p><br>
+                </div>
 
                     <% if current_user.id == @p.user_id %>
 
-            				<div class="col-sm-12" >
-                      	<%= link_to 'Edit', edit_post_path(@p) %><span class="glyphicon glyphicon-pencil"></span>
-                 				<%= link_to 'Delete', post_path(@p), data: {:confirm => 'Are you sure?'}, :method => :delete %> <span class="glyphicon glyphicon-remove"></span>
-            				</div>
+                    <center>
+              				<div class="col-sm-12" >
+                        	<%= link_to 'Edit', edit_post_path(@p) %><span class="glyphicon glyphicon-pencil" style="padding-right: 15px;"></span>
+                   				<%= link_to 'Delete', post_path(@p), data: {:confirm => 'Are you sure?'}, :method => :delete %> <span class="glyphicon glyphicon-remove"></span>
+              				</div>
+                    </center>
 
                     <% end %>
 
