--- a/app/views/pages/profile.html.erb
+++ b/app/views/pages/profile.html.erb
@@ -7,16 +7,16 @@
 			<b><p style="color:#black;font-size:25px;"><%= @username %></p></b>
 		  <%= render 'layouts/follow_form' if user_signed_in? %><br>
 
-      <div>
-        <%= form_tag "send_mail", method: :post , :authenticity_token => true, remote: true do %>
-
-          <%= hidden_field_tag :receiver_id, @user_of_current_profile.id%>
-          <p> Subject <%= text_field_tag(:p) %> </p>
-          <p> Body <%= text_field_tag(:b) %> </p>
-          <%= submit_tag "Send Mail" %>
-
-        <% end %>
-      </div>
+      <% unless current_user == @user_of_current_profile %>
+          <div>
+            <%= form_tag "send_mail", method: :post , :authenticity_token => true, remote: true do %>
+              <%= hidden_field_tag :receiver_id, @user_of_current_profile.id%>
+              <p> Subject <%= text_field_tag(:p) %> </p>
+              <p> Body &nbsp&nbsp&nbsp <%= text_field_tag(:b) %> </p>
+              <%= submit_tag "Send Mail", class: "btn btn-warning" %>
+            <% end %>
+          </div>
+      <% end %>
  
 
 		</center>
@@ -54,22 +54,23 @@
   			<div class="panel-body row">
 
   				<div class="col-sm-1">
-            <p> PICTURE</p>
-  					<!-- <img src="/lib/assets/Male_empty_profile.jpg"> -->
+  					<img src="/profile2.jpg" height="40" width="50">
   				</div>
 
   				<div class="col-sm-11">
   					<% @name = User.find_by_id(@p.user_id) %>
-  					<p class="post-title"; style="margin-left:25px;"> <b> <%= @username %> </b></p>
-  					<p class="post-content"; style="margin-left:25px";> <%= @p.content %> </p>
+  					<p class="post-title"; style="margin-left:25px;"><span style="background-color:#80b3ff;padding: 5px;"> <font size="3"><b> <%= @username %> </b></font></p>
+  					<p class="post-content"; style="margin-left:25px";><span style="background-color:#e6ffb3;padding: 5px;"> <font size="4"> <%= @p.content %> </p><br>
   				</div>
 
   				<% if user_signed_in? and current_user.id == @p.user_id %>
 
-  				<div class="col-sm-12" >
-            	<%= link_to 'Edit', edit_post_path(@p) %><span class="glyphicon glyphicon-pencil"></span>
+  				<center>
+            <div class="col-sm-12" >
+            	<%= link_to 'Edit', edit_post_path(@p) %><span class="glyphicon glyphicon-pencil" style="padding-right: 15px;"></span>
        				<%= link_to 'Delete', post_path(@p), data: {:confirm => 'Are you sure?'}, :method => :delete %> <span class="glyphicon glyphicon-remove"></span>
-  				</div>
+  				  </div>
+          </center>
 
   				<% end %>
 
@@ -85,12 +86,14 @@
 		
 		<div class="panel panel-default">
   			<div class="panel-body">
-  				<b>WHO TO FOLLOW</b>
-  				<% @users.each do |user| %>
-  					<br/>
-  					<a href="/user/<%=user.id%>"><%= user.email %></a>
-  				<% end %>
-			</div>
+
+          <ul class="list-group">
+              <li class="list-group-item">WHO TO FOLLOW</li>
+      				<% @users.each do |user| %>
+                <a href="/user/<%=user.id%>" class="list-group-item list-group-item-info"><%= user.email %></a>
+      				<% end %>
+          </ul>
+			  </div>
 		</div>
 		
 		<div class="panel panel-default">
