--- a/app/views/posts/edit.html.erb
+++ b/app/views/posts/edit.html.erb
@@ -5,7 +5,7 @@
 <%= form_for @post_to_edit do |f| %>
 
   <div class="field">
-    <%= f.text_field :content, autofocus: true%>
+    <%= f.text_area :content, autofocus: true%>
   </div>
 
 
