--- a/app/views/pages/profile.html.erb
+++ b/app/views/pages/profile.html.erb
@@ -2,20 +2,22 @@
 
 
 <div class="rows">
-	<div class="jumbotron">
+	<div class="jumbotron" style="padding: 100px;">
 		<center>
-			<b><p style="color:#black;font-size:25px;"><%= @username %></p></b>
+			<b><p style="color:blue;font-size:25px;font-weight:bold;"><%= @username %></p></b>
 		  <%= render 'layouts/follow_form' if user_signed_in? %><br>
 
+      <% if user_signed_in? %>
       <% unless current_user == @user_of_current_profile %>
           <div>
             <%= form_tag "send_mail", method: :post , :authenticity_token => true, remote: true do %>
               <%= hidden_field_tag :receiver_id, @user_of_current_profile.id%>
-              <p> Subject <%= text_field_tag(:p) %> </p>
-              <p> Body &nbsp&nbsp&nbsp <%= text_field_tag(:b) %> </p>
+              <p style="color:#29e5c2;font-weight:bold;"> Subject <%= text_field_tag(:p) %> </p>
+              <p style="color:#29e5c2;font-weight:bold;"> Body &nbsp&nbsp&nbsp <%= text_field_tag(:b) %> </p>
               <%= submit_tag "Send Mail", class: "btn btn-warning" %>
             <% end %>
           </div>
+      <% end %>
       <% end %>
  
 
@@ -41,7 +43,7 @@
 
 	<div class="col-xs-6">
 
-		<% if user_signed_in? %>
+		<% if user_signed_in? and current_user == @user_of_current_profile %>
 		<div class="panel panel-default">
   			<div class="panel-body">
   				<%= render '/posts/posts_form' %>
